minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
  namespace: mwc-vod
spec:
  selector:
    matchLabels:
      app: minio-s3
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio-s3
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: minio-pv-claim
      containers:
      - name: minio-s3
        # Pulls the default MinIO image from Docker Hub
        image: docker.io/minio/minio:RELEASE.2020-12-29T23-29-29Z
        args:
        - gateway 
        - s3 
        - 'https://s3.openshift-storage.svc.cluster.local/'
        #- 'https://s3-openshift-storage.apps.ssic.openshift.smc/' 
        - /storage
        ports:
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
